k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: backend
  name: backend
  namespace: gym-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      service: backend
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: backend
    spec:
      containers:
        - image: ghcr.io/eutampieri/gym-manager/backend:latest
          name: backend
          resources:
            limits:
              cpu: 2
              memory: 1Gi
            requests:
              cpu: 128m
              memory: 128Mi
          ports:
            - containerPort: 3000
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: frontend
  name: frontend
  namespace: gym-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: frontend
    spec:
      containers:
        - image: ghcr.io/eutampieri/gym-manager/frontend:latest
          name: frontend
          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
            requests:
              cpu: 128m
              memory: 128Mi
          ports:
            - containerPort: 80
      restartPolicy: Always
