k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: backend
  name: backend
  namespace: gym-manager
spec:
  clusterIP: None
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    service: backend
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend
  namespace: gym-manager
spec:
  clusterIP: None
  ports:
    - name: "http"
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    service: frontend
