k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-ingress
  namespace: gym-manager
spec:
  rules:
    - host: gym-manager.tampieri.me
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 80
